manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: webhook-translator-service
spec:
  selector:
    app: webhook-translator
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
