manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webhook-translator-ingress
  namespace: webhook-test
  annotations:
    #cert-manager.io/cluster-issuer: letsencrypt
    #nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    #nginx.ingress.kubernetes.io/rewrite-target: /
  labels:
    app: webhook
spec:
  ingressClassName: nginx
  rules:
  - host: ""
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: webhook-translator-service
            port:
              number: 80
